Implemented function and route
