# backend/api-spec.json
@@ -5,7 +5,7 @@
     "title": "My API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:3000",
+  "host": "localhost:8000",
   "basePath": "/",
   "tags": [
     {
@@ -52,7 +52,7 @@
         }
       }
     },
-    "/users/": {
+    "/clusters/": {
       "get": {
         "description": "",
         "parameters": [],
@@ -63,32 +63,6 @@
         }
       },
       "post": {
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/customers/": {
-      "get": {
-        "tags": [
-          "Customers"
-        ],
-        "description": "",
-        "parameters": [],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "Customers"
-        ],
         "description": "",
         "parameters": [
           {
@@ -97,16 +71,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "age": {
-                  "example": "any"
-                },
-                "title": {
-                  "example": "any"
-                },
-                "company": {
+                "location": {
                   "example": "any"
                 }
               }
@@ -120,11 +85,8 @@
         }
       }
     },
-    "/customers/{id}": {
-      "get": {
-        "tags": [
-          "Customers"
-        ],
+    "/clusters/delete/{id}": {
+      "delete": {
         "description": "",
         "parameters": [
           {
@@ -135,32 +97,35 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Created"
           }
         }
       }
     },
-    "/customers/updateName/{id}": {
-      "put": {
-        "tags": [
-          "Customers"
-        ],
+    "/clusters/nets/": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
         "description": "",
         "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
           {
             "name": "body",
             "in": "body",
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
+                "clusterID": {
+                  "example": "any"
+                },
+                "type": {
                   "example": "any"
                 }
               }
@@ -168,19 +133,140 @@
           }
         ],
         "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/clusters/nets/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
           "200": {
             "description": "OK"
           }
         }
       }
     },
-    "/customers/resetAges": {
-      "post": {
-        "tags": [
-          "Customers"
+    "/clusters/net/delete/{id}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
         ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/clusters/data/": {
+      "get": {
         "description": "",
         "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "apost": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "netID": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                },
+                "water_collected": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/clusters/data/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/clusters/data/delete/{id}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/clusters/{minDate}/{maxDate}/": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "minDate",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "maxDate",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
